# specvod_backend

./: .gitignore  pyproject.toml
app/app/: api.py  celery.py  settings.py  urls.py
app/contacts/: admin.py  api.py  api_schemas.py  apps.py  models.py
app/contacts/migrations/: 0001_initial.py  0002_employee.py  0003_file.py  0004_contacts.py  0005_contacts_conpany_name_contacts_inn_kpp_contacts_ogrn_and_more.py  0006_contacts_cookie_text_contacts_policy_text.py  0007_contacts_cookie_text_title_and_more.py
app/main/: admin.py  api.py  api_schemas.py  models.py  tasks.py
app/main/migrations/: 0001_initial.py  0002_alter_preim_order.py  0003_employee_alter_preim_options.py  0004_partner.py  0005_reviewsource_review.py  0006_faq.py  0007_number.py  0008_sertificate.py  0009_quiz.py  0010_promotion.py  0011_priceposition.py  0012_method.py  0013_alter_method_img.py  0014_technic.py  0015_etap.py  0016_homepage.py  0017_alter_homepage_about_company_img.py  0018_historyetap_homepage_history_desc_and_more.py  0019_homepage_services_title_alter_homepage_history_desc.py  0020_alter_homepage_history_desc.py  0021_homepage_services_desc.py  0022_homepage_faqs.py  0023_alter_homepage_about_company_text_and_more.py  0024_anchor_alter_technic_desc.py  0025_homepage_anchors.py  0026_alter_anchor_block.py
app/main/services/: send_mail.py
app/services/: admin.py  api.py  api_schemas.py  apps.py  models.py
app/services/migrations/: 0001_initial.py  (+26 more)
app/works/: admin.py  api.py  api_schemas.py  apps.py  models.py
start/dev/: server.sh
start/prod/: celery.sh  server.sh
(+6 files in other folders)
